<resources>
    <string name="app_name">AAPG SUEZ</string>
    <string name="our_gratitute_to_every_single_person_who_shared_us_study_sources">Our Gratitute to every single person who shared us study sources.</string>
    <string name="todo">TODO</string>
    <string name="recent_articles"><u>Recent Articles</u></string>
    <string name="category"><u>Category Name</u></string>
    <string name="marketing"><u>Marketing</u></string>
    <string name="soft_skills"><u>Soft Skills</u></string>
    <string name="design"><u>Design</u></string>
    <string name="business"><u>Business</u></string>
    <string name="it"><u>Technology</u></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_refresh">Reload</string>
    <string name="action_settings">Settings</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="missingMaterialText">If you don\'t find your desired material please contact us</string>
    <string name="contact_us">Contact Us</string>
    <string name="GO">Go</string>
    <string name="no_events">Check your internet connection.</string>
    <string name="no_articles">Check your internet connection.</string>
    <string name="no_test">Check your internet connection.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string-array name="faculty">
        <item>Choose your Faculty....</item>
        <item>Petroleum and Mining Engineering Faculty</item>
        <item>Science Faculty</item>
        <item>Education Faculty</item>
        <item>Arts and Humanities Science Faculty</item>
        <item>Computers and Information Faculty</item>
        <item>Fish Resources and Marine Studies Faculty</item>
        <item>Politics and Economy Faculty</item>
        <item>Industrial Education</item>
        <item>Medicine Faculty</item>
    </string-array>
    <string-array name="year4">
        <item>Choose the year...</item>
        <item>First year</item>
        <item>Second year</item>
        <item>Third year</item>
        <item>Fourth year</item>
    </string-array>
    <string-array name="year3">
        <item>Choose the year...</item>
        <item>First year</item>
        <item>Second year</item>
        <item>Third year</item>
    </string-array>
    <string-array name="year32">
        <item>Choose the year...</item>
        <item>Second year</item>
        <item>Third year</item>
        <item>Fourth year</item>
    </string-array>
    <string-array name="year2">
        <item>Choose the year...</item>
        <item>First year</item>
        <item>Second year</item>
    </string-array>
    <string-array name="year1">
        <item>Choose the year...</item>
        <item>First year</item>
    </string-array>
    <string-array name="year13">
        <item>Choose the year...</item>
        <item>First year</item>
        <item>Third year</item>
    </string-array>
    <string-array name="departmentIE">
        <item>Choose your Department .... </item>
        <item>قسم انشاءات مدنية ومعمارية</item>
        <item>قسم كهرباء</item>
        <item>قسم ميكانيكا</item>
        <item>الفرقة الاولى</item>
    </string-array>
    <string-array name="departmentSC">
        <item>Choose your Department .... </item>
        <item>Physics</item>
        <item>Microbiology</item>
        <item>Mathematics</item>
        <item>Industrial Chemistry</item>
        <item>Geology</item>
        <item>First Level</item>
        <item>Biochemistry</item>
        <item>Biotechnology</item>
    </string-array>
    <string-array name="materialPH">
        <item>اختر المادة...</item>
        <item>نووية واشعاعية</item>
        <item>فزياء رياضية</item>
        <item>ذرية</item>
        <item>ضوء فيزيائى د.آمنة</item>
        <item>حرارة وخواص د/بهجت</item>
        <item>جوامد 1</item>
        <item>امتحانات فيزياء</item>
        <item>others</item>
    </string-array>
    <string-array name="materialMedicine11">
        <item>Choose Material...</item>
        <item>Anatomy 1</item>
        <item>Biochemistry 1</item>
        <item>Community 1</item>
        <item>Histology 1</item>
        <item>Medical term list</item>
        <item>Microbiology 1</item>
        <item>Para 1</item>
        <item>Pathology 1</item>
        <item>Pharmacology 1</item>
        <item>Physiology 1</item>
    </string-array>
    <string-array name="materialMedicine12">
        <item>Choose Material...</item>
        <item>Anatomy 2</item>
        <item>Biochemistry 2</item>
        <item>Community 2</item>
        <item>Histology 2</item>
        <item>Microbiology 2</item>
        <item>Para 2</item>
        <item>Pathology 2</item>
        <item>Pharmacology 2</item>
        <item>Physiology 2</item>
    </string-array>
    <string-array name="materialMI">
        <item>اختر المادة...</item>
        <item>وراثة حيوية وجزيئية د.سامية</item>
        <item>ميكروبايولوجى الغذاء وامراض النبات د.صالحة</item>
        <item>فطريات ووراثة ميكروبات د.عبدالحميد</item>
        <item>طحالب د.الهام</item>
        <item>ترشيح نبات وشكل ظاهرى د.الشحات</item>
        <item>ترشيح متقدم د.الشحات</item>
        <item>بكتريا عامة د.صالحة</item>
        <item>امتحانات ميكروبايولوجى</item>
        <item>others</item>
    </string-array>
    <string-array name="materialMA">
        <item>اختر المادة...</item>
        <item>مقدمة فى علم الحاسب د/وائل فواز</item>
        <item>معادلات تفاضلية عادية د.هبة</item>
        <item>توبولوجى د.محمد رمضان</item>
        <item>تحليل مركب د.محمد صالح</item>
        <item>تحليل رياضة 2 د/هبة</item>
        <item>امتحانات قسم رياضة</item>
        <item>احصاء حيوى د/محمد الشحات</item>
        <item>others</item>
    </string-array>
    <string-array name="materialIC">
        <item>اختر المادة...</item>
        <item>امتحانات كيمياء صناعية</item>
    </string-array>
    <string-array name="materialPG">
        <item>اختر المادة...</item>
        <item>نارية</item>
        <item>مقدمة فى علم الحاسب د/وائل</item>
        <item>مقدمة فى علم الحيوان د/رانيا+د/هويدا</item>
        <item>حرارة وخواص1 د/بهجت</item>
        <item>جيولوجيا عامة د/اسماعيل سيد</item>
        <item>اسس كيمياء فيزيائية د/شيماء خلف</item>
        <item>Structural Geology د.فارس</item>
        <item>Remote sensing د.فارس</item>
        <item>فرقة تالتة ترم اول</item>
        <item>عينات صخور ومعادن</item>
        <item>خرائط جيولوجية</item>
        <item>امتحانات جيولوجيا</item>
        <item>امتحان marine</item>
        <item>Survey</item>
        <item>Sedimentology د.حسن</item>
        <item>Microfossils د.حسن</item>
        <item>Metamorphic</item>
        <item>Introduction of Structural Geology د.حسن</item>
        <item>Hydrogeology</item>
        <item>Hydrogeochemistry</item>
        <item>Geophysics د.سعادة</item>
        <item>Geophysics Methods</item>
        <item>Electrics د.سعادة</item>
        <item>Archeological Dating methods 2</item>
        <item>Absolute Dating</item>
        <item>others</item>
    </string-array>
    <string-array name="material_science_first">
        <item>اختر المادة...</item>
        <item>General Geology</item>
        <item>Marine Geology</item>
        <item>Mathematical Analysis</item>
        <item>Physical Chemistry</item>
        <item>Zoology</item>
        <item>حقوق انسان</item>
        <item>others</item>
    </string-array>
    <string-array name="materialBC">
        <item>اختر المادة...</item>
        <item>ملخص كيمياء حيوى د.وليد</item>
        <item>امتحانات كيمياء حيوى</item>
        <item>others</item>
    </string-array>
    <string-array name="materialBI">
        <item>اختر المادة...</item>
        <item>وراثة خلوية د.احمد عيسى</item>
        <item>كيمياء حيوى (كربوهيدرات) د.وليد سراج</item>
        <item>علم الدم د.عايدة</item>
        <item>امتحانات Biotechnology</item>
        <item>others</item>
    </string-array>
    <string-array name="semesterpe1">
        <item>Choose the semester...</item>
        <item>first semester Y1</item>
        <item>second semester Y1</item>
    </string-array>
    <string-array name="semesterpe2">
        <item>Choose the semester...</item>
        <item>first semester Y2</item>
    </string-array>
    <string-array name="materialpe11">
        <item>اختر المادة...</item>
        <item>مبادئ القانون 1</item>
        <item>مبادئ العلوم السياسة</item>
        <item>مبادئ السلوك التنظيمى</item>
        <item>اقتصاد جزئى</item>
        <item>امتحانات 1</item>
    </string-array>
    <string-array name="materialpe12">
        <item>اختر المادة...</item>
        <item>مبادئ القانون 2</item>
        <item>مبادئ احصاء</item>
        <item>حقوق انسان</item>
        <item>الادارة العامة</item>
        <item>اقتصاد كلى</item>
        <item>اقتصاد جزئى2</item>
        <item>international organization</item>
        <item>امتحانات 2</item>
    </string-array>
    <string-array name="materialpe21">
        <item>اختر المادة...</item>
        <item>امتحان اقتصاد</item>
    </string-array>
    <string-array name="material_msayd">
        <item>Choose the material...</item>
        <item>حرف صيد سلبية</item>
        <item>سلامة بحرية</item>
        <item>فنون بحرية</item>
        <item>Others</item>
    </string-array>
    <string-array name="material_slama">
        <item>Choose the material...</item>
        <item>امتحانات</item>
        <item>Others</item>
    </string-array>
    <string-array name="yearRF">
        <item>Choose the year...</item>
        <item>مميز</item>
        <item>اساسى</item>
    </string-array>
    <string-array name="yearRF1">
        <item>Choose the year...</item>
        <item>First year F.R</item>
    </string-array>
    <string-array name="yearRF2">
        <item>Choose the year...</item>
        <item>Second year F.R</item>
    </string-array>
    <string-array name="semesterfr1">
        <item>Choose the semester...</item>
        <item>first semester - second year</item>
    </string-array>
    <string-array name="semesterfr11">
        <item>Choose the semester...</item>
        <item>first semester - first year</item>
    </string-array>
    <string-array name="materialfr112">
        <item>اختر المادة...</item>
        <item>MidTerm</item>
        <item>Exams1</item>
        <item>Exams2</item>
    </string-array>
    <string-array name="materialfr11">
        <item>اختر المادة...</item>
        <item>Exams</item>
        <item>فلك وارصاد جوية</item>
        <item>بحيـرات</item>
    </string-array>
    <string-array name="departmentfr">
        <item>Choose your Department ....</item>
        <item>متطلبات</item>
        <item>هندسة بحرية</item>
        <item>قسم ملاحة</item>
        <item>قسم مصايد</item>
        <item>سلامة بحرية</item>
        <item>قسم تصنيع</item>
        <item>قسم تنمية بشرية</item>
        <item>قسم الاقتصاد السمكى</item>
        <item>قسم استزراع</item>
        <item>الفرقة الاولى مميز</item>
        <item>الفرقة الاولى اساسى</item>
    </string-array>
    <string-array name="materialfr">
        <item>اختر المادة...</item>
        <item>Caga culture</item>
        <item>Caga culture-fourth year</item>
        <item>تسويق</item>
    </string-array>
    <string-array name="materialfr1">
        <item>اختر المادة...</item>
        <item>final oceanography</item>
        <item>فلك وأرصاد جوية</item>
        <item>بحيرات</item>
    </string-array>
    <string-array name="yearcs">
        <item>Choose the year...</item>
        <item>first year C.S</item>
        <item>second year C.S</item>
    </string-array>
    <string-array name="semestercs1">
        <item>Choose the semester...</item>
        <item>first semester Y1-C.S</item>
        <item>second semester Y1-C.S</item>
    </string-array>
</resources>