<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mozakra"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aapgsusc.aapgsuez.Mozakra">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo_gam3a" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/our_gratitute_to_every_single_person_who_shared_us_study_sources"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/faculty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:contextClickable="false"
            tools:ignore="ObsoleteLayoutParam,UnusedAttribute"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="58dp" />

        <Spinner
            android:id="@+id/department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/faculty"
            android:layout_marginTop="15dp"
            android:contextClickable="false"
            android:visibility="invisible"
            tools:ignore="ObsoleteLayoutParam,UnusedAttribute"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="58dp" />

        <Spinner
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/semester"
            android:layout_marginTop="15dp"
            android:contextClickable="false"
            android:visibility="invisible"
            tools:ignore="ObsoleteLayoutParam,UnusedAttribute"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="58dp" />

        <Spinner
            android:id="@+id/semester"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/material"
            android:layout_marginTop="15dp"
            android:contextClickable="false"
            android:visibility="invisible"
            tools:ignore="ObsoleteLayoutParam,UnusedAttribute"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="58dp" />

        <Spinner
            android:id="@+id/material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="15dp"
            android:contextClickable="false"
            android:visibility="invisible"
            tools:ignore="ObsoleteLayoutParam,UnusedAttribute"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="58dp" />
        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/missingMaterial"
            android:padding="6dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/missingMaterialText"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GO"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/Go"
            android:padding="15dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:background="#530000"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/contactUS"
            android:padding="15dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:background="#530000"/>


    </LinearLayout>
</ScrollView>
</RelativeLayout>
